@@ -1,6 +1,8 @@
 glibc (2.22-11) UNRELEASED; urgency=medium
 
-  * 
+  [ Samuel Thibault ]
+  * hurd-i386/tg-poll_errors_fixes.diff: Fix crash when calling poll or select
+    on a fd which had never been allocated.  Closes: #826175.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 31 May 2016 23:50:57 +0200
 
